# utilities

./: .gitignore  .gitnexusignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  tasks.json  thoughts.json
dashboard/api/: main.py  routes.py  storage.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
devops_agent/: DEPRECATED.md  __init__.py  analyze.py  audit.py  cli.py  config.py  errors.py  health.py  logging_setup.py  models.py  notify.py  projects.toml  railway.py  regression.py  report.py  retry.py  rollback.py  second_opinion.py  smoke.py  templates.py
devops_agent/tests/: test_report.py  test_rollback.py
error-logging/: SPEC.md  log-error.sh
mcp_servers/doc_chunker/: README.md  server.py
project-management/: SPEC.md  thoughts.json
prompts/: README.md  prompt-11.md  prompt-12.md  prompt-15.md  prompt-18.md  prompt-19.md  prompt-2.md  prompt-20.md  prompt-21.md  prompt-8.md
railway/backend/: Dockerfile  railway.json
railway/caddy-proxy/: Caddyfile  Dockerfile  railway.json
railway/frontend/: Dockerfile  railway.json
scripts/: dialogue.py  doc_to_audio.py  doc_to_podcast.py  doc_to_speech.py  ingest_book_epub.py  ingest_book_pdf.py  ingest_cs_batch.py  ingest_reference_doc.py  ingest_reference_doc_clean.py  ingest_roadmap_corpus.py  install-git-hooks.sh  kb  kb-audio  kb_cli.py  kb_core.py  kb_ingest.py  lint_podcast_brand_words.py  lint_podcast_filler.py  lint_podcast_prosody.py  lint_podcast_speaker_names.py  md_to_turns.py  meeting_prep.py  migrate_podcast_audio.py  podcast_meta.py  pron_overrides.clinical.json  pron_overrides.json  rebuild_faq_pages.py  smoketest_summary.py  verify_plan_26_5_21_guided_summary.py  verify_plan_26_5_9_codex_skill_radar.py
scripts/doc_ingest/: README.md  __init__.py  chunk.py  embed_batch.py  extract.py  images.py  ir.py  lint_core_no_equipment.py  smoke.py
scripts/git-hooks/: post-commit  pre-commit
scripts/kb_core/: __init__.py  analysis.py  chunking.py  clustering.py  config.py  db.py  embeddings.py  harvest.py  llm.py  openwebui_runtime.py  quotes.py  scrub.py  search.py  summarize.py  synthesis.py  transcribe.py  transcripts.py
scripts/migrations/: 001_stakeholders_to_clients.sql  002_doc_chunks.sql  003_guided_summary_pivot.sql  004_raw_transcript_protocol.sql  005_summary_lens_provenance.sql  006_call_outputs.sql  migrate_tasks_json.py
scripts/radar/: build_index.py  build_protocol_index.py  build_schema_index.py  doctrine_registry.py  embed_client.py  output_adapter.py  protocol_corpus.py  radar_harvest.py  radar_post_tool.py  radar_prompt.py  radar_ratio_report.py  radar_record.py  radar_stop.py  schema_corpus.py  session_log.py  thresholds.py
scripts/skill_hook/: build_index.py  embed_client.py  event_adapter.py  harvest.py  hook.py  prompt_hook.py
services/caddy/: Caddyfile  Dockerfile
services/coach/: .gitignore  Dockerfile  README.md  agent.py  app.py  auth.py  build_brain.py  db.py  embed.py  harness_agent.py  ingest_podcast.py  ingest_policy_research.py  meeting_prep.py  mint_coach_token.py  pyproject.toml  review_cache.py  schema_review_cache.sql  storage.py  tools.py
services/coach/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
services/coach/frontend/src/: CoachChat.tsx  api.ts  index.css  main.tsx
services/coach/frontend/src/components/: ChatInputBar.tsx  MessageBubble.tsx  MicButton.tsx
services/coach/frontend/src/hooks/: useSTT.ts
services/embed/: Dockerfile  app.py  nomic_embed.py  pyproject.toml  railway.toml  requirements.txt
services/embed/tests/: test_single_load.py
services/files/: Dockerfile  main.py  railway.toml  templates.py
services/nextcloud/: Dockerfile  docker-entrypoint-wrapper.sh  entrypoint-wrapper-state.php  entrypoint-wrapper.sh  oidc-setup.sh  railway.toml
services/oidc-otp/: Dockerfile  main.py  railway.toml
services/podcast/: .gitignore  Dockerfile  README.md  admin.py  app.py  db.py  feed.py  models.py  pyproject.toml  seed.py  storage.py  test_feed_cache.py
services/sftpgo-bridge/: Dockerfile  main.py  pyproject.toml  railway.toml
services/stt/: Dockerfile  app.py  pyproject.toml  railway.toml  requirements.in  requirements.txt
services/tts/: Dockerfile  app.py  pyproject.toml  railway.toml  requirements.in  requirements.txt
tests/: test_embed_client.py  test_radar_adapter.py  test_skill_hook_adapter.py
voice_demo/: README.md  index.html  main.ts  server.py  styles.css
(+81 files in other folders)
