[project]
name = "utilities"
version = "1.1.0"
description = "Shared utilities library for Strong Prompt projects"
requires-python = ">=3.12"
dependencies = [
    "nomic-onnx-embed",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "fastmcp>=0.1.0",
    "qdrant-client>=1.7.0",
    "openai>=1.0.0",
    "psycopg[binary]>=3.3.2",
    "anthropic>=0.76.0",
    "click>=8.1.0",
    "python-docx>=1.2.0",
    "einops>=0.8.2",
    "scikit-learn>=1.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "lmstudio>=1.2.0",
]

[project.scripts]
kb = "scripts.kb_cli:cli"
kb-ingest = "scripts.kb_ingest:main"

[tool.uv.sources]
nomic-onnx-embed = { path = "packages/embed" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts", "dashboard"]
