[project]
name = "tts-service"
version = "0.1.0"
description = "Kokoro-82M ONNX text-to-speech service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "numpy>=1.24.0",
    "kokoro-onnx>=0.4.0",
    "PyJWT>=2.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
